# test_exchange

./: .env_sample  Dockerfile  README.md  compose.yaml  pyproject.toml
conf/: settings.py  urls.py
exchange/: services.py  tests.py  urls.py  views.py
